# blackjack-rs

./: Cargo.toml  README.md
src/: deck.rs  main.rs  strategy.rs
