[package]
name = "blackjack-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.23"
tokio = { version = "1", features = ["full"] }
serde = "1.0.145"
thiserror = "1.0.37"
eyre = "0.6.8"
rand = "0.8.5"
futures = "0.3.25"
lazy_static = "1.4.0"
